syntax = "proto3";

import "cartographer/transform/proto/transform.proto";

package cartographer.mapping.proto;

message Keypoint {
  transform.proto.Vector3f position = 2;
}

message CircleDescriptor {
  float score = 1;
  float radius = 2;
}

message CircleFeature {
  Keypoint keypoint = 1;
  CircleDescriptor fdescriptor = 2;
}
